# pipeworks-namegen-lexicon

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  README.md  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  release-please.yml
data/annotated/: syllables_annotated.json
docs/: Makefile
docs/source/: conf.py  index.rst
src/build_tools/: README.md  __init__.py
src/build_tools/corpus_db/: __init__.py  schema.py
src/build_tools/corpus_sqlite_builder/: __init__.py  converter.py  schema.py
src/build_tools/name_combiner/: aggregator.py  cli.py  combiner.py
src/build_tools/name_selector/: cli.py  name_class.py  policy.py
src/build_tools/nltk_syllable_normaliser/: __main__.py  fragment_cleaner.py
src/build_tools/syllable_analysis/common/: paths.py
src/build_tools/syllable_feature_annotator/: __main__.py  annotator.py  feature_rules.py  file_io.py  phoneme_sets.py
src/build_tools/syllable_walk/: __init__.py  metrics.py  reach.py  terrain_weights.py  walker.py
src/build_tools/syllable_walk_web/: __init__.py  __main__.py  cli.py  run_discovery.py  server.py  state.py
src/build_tools/syllable_walk_web/api/: __init__.py  browse.py  pipeline.py  walker.py  walker_cache_lock.py  walker_common.py  walker_lock.py  walker_ops.py  walker_session.py  walker_types.py
src/build_tools/tui_common/: __init__.py
src/pipeworks_namegen_lexicon/: __init__.py  version.py
tests/: README.md  __init__.py  test_analysis_common.py  test_reach.py  test_smoke.py  test_syllable_walk.py  test_syllable_walk_run_discovery.py  test_syllable_walk_server.py  test_syllable_walk_web_api_browse.py  test_syllable_walk_web_api_pipeline.py  test_syllable_walk_web_api_walker.py  test_syllable_walk_web_api_walker_common.py  test_syllable_walk_web_api_walker_lock.py  test_syllable_walk_web_cli.py  test_syllable_walk_web_packager.py  test_syllable_walk_web_pipeline_manifest.py  test_syllable_walk_web_pipeline_runner.py  test_syllable_walk_web_profile_reaches_cache.py  test_syllable_walk_web_schema_resource.py  test_syllable_walk_web_services.py  test_syllable_walk_web_session_paths.py  test_syllable_walk_web_state.py  test_syllable_walk_web_walker_run_state_store.py  test_syllable_walk_web_walker_session_lock.py  test_syllable_walk_web_walker_session_store.py
tests/build_tools/: __init__.py
tests/build_tools/corpus_sqlite_builder/: __init__.py
tests/build_tools/name_combiner/: __init__.py  test_aggregator.py
tests/build_tools/name_selector/: __init__.py  test_cli.py  test_policy.py
tests/build_tools/nltk_syllable_extractor/: test_interactive.py
tests/build_tools/pyphen_syllable_extractor/: test_interactive.py
tests/build_tools/tui_common/: test_ledger.py
(+38 files in other folders)
